<resources>
    <string name="app_name">FoodChat</string>
    <string name="home">Ev</string>
    <string name="search">Axtarış</string>
    <string name="like">Bəyənilənlər</string>
    <string name="profile">Profil</string>
    <string name="chats">Mesajlar</string>
    <string name="forget_password">Şifrənizi unutmusunuz?</string>
    <string name="sign_up">Qeydiyyat</string>
    <string name="login">Giriş et</string>
    <string name="remember_me">Məni xatırla</string>
    <string name="password">Parol</string>
    <string name="email">Email</string>

    <string name="full_name">Tam adınız</string>
    <string name="logout">Çıxış et</string>
    <string name="username">İstifadəçi adı</string>
    <string name="post">Post</string>
    <string name="user_image">İstifadəçi şəkli</string>
    <string name="comment">Koment</string>
    <string name="add_comment">Koment yaz…</string>
    <string name="share">Paylaş</string>
    <string name="add">Əlavə et</string>
    <string name="user_name">İstifadəçi adı</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="welcome">Xoş gəldiniz</string>
    <string name="send_link">Link göndər</string>
    <string name="reset_password">Şifrənin bərpası</string>
</resources>