<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="15sp">

        <androidx.cardview.widget.CardView
            android:id="@+id/login_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@android:color/white"
            app:cardElevation="10dp"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:gravity="center"
                    android:paddingBottom="25dp"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <EditText
                        android:id="@+id/fullname"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:hint="@string/full_name"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName" />


                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:hint="@string/email"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:id="@+id/passwd"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:hint="@string/password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword" />

                    <CheckBox
                        android:id="@+id/check_remember_me"
                        android:layout_width="wrap_content"
                        android:layout_height="56dp"
                        android:layout_marginTop="10sp"
                        android:text="@string/term_policy"
                        android:textSize="17sp" />

                </LinearLayout>


                <Button
                    android:id="@+id/button_signup"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="10sp"
                    android:enabled="false"
                    android:textAllCaps="false"
                    android:text="@string/sign_up"
                    android:textColor="@color/white" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/progress_rel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="20dp"
            android:visibility="invisible"
            android:translationZ="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>